<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_release">ai Health</string>
    <string name="app_name_debug">ai Health(测试版)</string>
    <string name="string_add_device">添加设备</string>
    <string name="string_more_device">更多设备</string>
    <string name="string_go_measure">去测量</string>
    <string name="string_not_measure">暂不测量</string>
    <string name="string_dialog_bp_content">测量一下血压吧~</string>
    <string name="string_check_fun">校准方法:</string>
    <string name="string_check_desc">用医疗级血压计与手表同时测量血压三次，并手动输入每次医疗级血压计的测量结果</string>
    <string name="string_start_calibration">开始校准</string>
    <string name="string_measure_ing">测量中</string>
    <string name="string_status">状态</string>
    <string name="string_measure_bp">血压测量</string>
    <string name="string_measure_again">再次测量</string>
    <string name="string_bp_pulse">脉搏</string>
    <string name="string_logout_cuurent_accout">退出登录当前账号?</string>
    <string name="string_save_and_use">保存并应用</string>
    <string name="string_dial_fail">失败</string>
    <string name="string_dial_download_fail">下载失败</string>
    <string name="strign_dial_other_later">已有其他表盘在安装,请稍后再试</string>
    <string name="string_has_current_dial">已是当前表盘,无需安装</string>
    <string name="string_install_number">人安装</string>
    <string name="string_dial_free">免费</string>
    <string name="string_dial_edi">编辑</string>
    <string name="string_dial_current">当前表盘</string>
    <string name="string_dial_updating">更新中..</string>
    <string name="string_select">选择</string>
    <string name="string_dial_detail">表盘详情</string>
    <string name="string_dial_precautions_desc">安装过程中，为了确保安装成功，请勿离开本界面，请勿操作手机和手表。</string>
    <string name="string_dial_precautions">注意事项:</string>
    <string name="string_dial_download">下载</string>
    <string name="string_dial_install">安装</string>
    <string name="string_input_title_desc">请输入标题,以便区分</string>
    <string name="string_inupt_interval">输入间隔</string>
    <string name="string_custom_interval">自定义间隔</string>
    <string name="string_custom">自定义</string>
    <string name="string_daily">天</string>
    <string name="string_has_add_card">已添加卡片</string>
    <string name="string_more_card">更多卡片</string>
    <string name="string_day_avg">日均</string>
    <string name="tring_month_avg">月均</string>
    <string name="string_this_change">本次变化</string>
    <string name="string_month_bmi">本月BMI均值</string>
    <string name="string_week_bmi">本周BMI均值</string>
    <string name="string_month_avg">本月日均</string>
    <string name="string_week_avg">本周日均</string>
    <string name="string_compare_last_month">与上月相比</string>
    <string name="string_compare_last_week">与上周相比</string>
    <string name="string_compare_last_year">与上年相比</string>
    <string name="string_year_avg_month">本年月均</string>
    <string name="string_year_bmi">本年BMI均值</string>
    <string name="string_health_data">Health knowledge</string>
    <string name="string_not_agree">disagree</string>
    <string name="strign_agree_continue">agree and continue</string>
    <string name="string_and">and</string>
    <string name="string_user_agree_and_privacy">User Agreement and Privacy Policy</string>
    <string name="string_max_height">最高值</string>
    <string name="string_min_low">最低值</string>
    <string name="string_temp_status1">偏低</string>
    <string name="string_temp_status2">正常</string>
    <string name="string_temp_status3">低热</string>
    <string name="string_temp_status4">中热度</string>
    <string name="string_temp_status5">高热</string>
    <string name="string_temp_status6">超高热</string>
    <string name="string_tow_h_bp">二级高血压</string>
    <string name="string_one_h_bp">一级高血压</string>
    <string name="string_bp_normal_h_bp">正常高值血压</string>
    <string name="string_normal_bp">正常血压</string>
    <string name="string_pressure_avg">当前压力均值</string>
    <string name="string_pressure_max_min">最小值-最大值</string>
    <string name="string_sleep_into">入睡</string>
    <string name="string_sleep_wake_up">醒来</string>
    <string name="string_sleep_ngith_value">6-10小时</string>
    <string name="string_sleep_night_time">夜间睡眠时长</string>
    <string name="string_min_heart">最小心率</string>
    <string name="string_count_steps">总步数</string>
    <string name="string_day_avg_step">日均步数</string>
    <string name="string_map_ht_1">无氧耐力</string>
    <string name="string_map_ht_2">有氧耐力</string>
    <string name="string_heart_constant_1">80-90次/分钟</string>
    <string name="string_heart_constant_2">110-129次/分钟</string>
    <string name="string_heart_constant_3">130-159次/分钟</string>
    <string name="string_heart_constant_4">160-179次/分钟</string>
    <string name="string_heart_constant_5">180-220次/分钟</string>
    <string name="string_interval_2">区间</string>
    <string name="string_sport_record">运动记录</string>
    <string name="string_account_register_protocol">《账号注册协议》</string>
    <string name="string_click_continue">点击“继续”即表明同意</string>
    <string name="string_know_risk">我了解风险,继续</string>
    <string name="string_verify_bind_phone">验证已绑定手机号</string>
    <string name="string_has_send_code">已发送验证码至</string>
    <string name="string_logout_account_desc">一旦个人用户注销账户，个人账户就会关闭，这样一来APP将会停止为您提供涉及账号类方面的服务，而且一旦注销成功是无法撤销恢复的，后台将删除所有与注销账号相关联的数据。</string>
    <string name="string_original_phone">原手机号</string>
    <string name="string_verify_original_phone">验证原手机号</string>
    <string name="string_confirm_pwd">确认密码</string>
    <string name="string_new_pwd">新密码</string>
    <string name="string_verify_code">验证码</string>
    <string name="string_phone_number">手机号</string>
    <string name="string_complete">完成</string>
    <string name="string_dfu_watch_low_battery_desc">手表电量过低，建议充电后再进行升级</string>
    <string name="string_update_version">更新版本</string>
    <string name="string_heart_alarm_set_desc">实时心率达到或超过次临界值,手表将会震动报警</string>
    <string name="string_heart_alarm_set">设定临界值</string>
    <string name="string_number_time">%1$s次</string>
    <string name="string_the_time">第%1$s次</string>
    <string name="string_permanent">永久</string>
    <string name="string_take_media">吃药</string>
    <string name="string_edit_alarm">编辑闹钟</string>
    <string name="string_add_alarm">添加闹钟</string>
    <string name="string_flash_update">flash更新</string>
    <string name="string_total">累计里程</string>
    <string name="string_start">开始</string>
    <string name="string_hour">小时</string>
    <string name="string_minute">分钟</string>
    <string name="string_kilogram">公斤</string>
    <string name="string_feedback_type">反馈类型</string>
    <string name="string_feedback_title">问题反馈</string>
    <string name="string_submit">提交</string>
    <string name="string_conn_ing">重新连接中...</string>
    <string name="string_no_conn">未连接</string>
    <string name="string_my_goal">我的目标</string>
    <string name="string_about_us">关于我们</string>
    <string name="string_menu_data">数据</string>
    <string name="string_menu_sport">运动</string>
    <string name="string_my_device">我的设备</string>
    <string name="string_sleep_goal">睡眠目标</string>
    <string name="string_day">日</string>
    <string name="string_week">周</string>
    <string name="string_month">月</string>
    <string name="string_year">年</string>
    <string name="string_last_time">上一次</string>
    <string name="string_next_time">下一次</string>
    <string name="string_curr_change">本次变化</string>
    <string name="string_times_number">次数</string>
    <string name="string_distance">距离</string>
    <string name="string_km">公里</string>
    <string name="string_mile">英里</string>
    <string name="string_sport_detail">运动详情</string>
    <string name="string_max_heart">最大心率</string>
    <string name="string_time_minute_desc">时间(分钟)</string>
    <string name="string_spo2_s_2">缺氧</string>
    <string name="string_spo2_s_3">严重缺氧</string>
    <string name="string_spo2_title">血氧饱和度</string>
    <string name="string_location_top">上</string>
    <string name="string_location_middle">中</string>
    <string name="string_location_bottom">下</string>
    <string name="string_set_dial_ing">更换表盘中,请稍后...</string>
    <string name="string_dial_has_dial">设备已经有存储这个表盘!</string>
    <string name="string_small_pickture">图片过小，请选择合适图片尺寸!</string>
    <string name="string_current_schedule">当前进度</string>
    <string name="string_white">白色</string>
    <string name="string_black">黑色</string>
    <string name="string_red">红色</string>
    <string name="string_red_orange">红橙色</string>
    <string name="string_orange">橙色</string>
    <string name="string_yellow">黄色</string>
    <string name="string_cyan">青色</string>
    <string name="string_blue">蓝色</string>
    <string name="string_purple">紫色</string>
    <string name="string_step">计步</string>
    <string name="string_heart">心率</string>
    <string name="string_dial_location">位置</string>
    <string name="string_feature_select">功能选择</string>
    <string name="string_txt_color">字体颜色</string>
    <string name="string_dial_bg">表盘背景</string>
    <string name="string_save_successed">保存成功!</string>
    <string name="string_save_failed">保存失败!</string>
    <string name="string_bp_input_sphy">请输入血压计测量结果</string>
    <string name="string_calibration_first">第一次测量</string>
    <string name="string_calibration_second">第二次测量</string>
    <string name="string_calibration_third">第三次测量</string>
    <string name="string_measure_result">测量结果</string>
    <string name="string_measure_status">测量状态</string>
    <string name="string_input_valid_bp">请输入正常的血压值!</string>
    <string name="string_calibration_step">校准步骤</string>
    <string name="string_calibration">校准</string>
    <string name="string_select_normal_date">请选择正确的日期!</string>
    <string name="string_add_failed">添加失败</string>
    <string name="string_add_successed">添加成功</string>
    <string name="string_input_bp_title">输入血压</string>
    <string name="string_bp_record">血压记录</string>
    <string name="string_bp_rang_reference">血压范围参考</string>
    <string name="string_watch_measure">手表测量</string>
    <string name="string_dbp">舒张压</string>
    <string name="string_sbp">收缩压</string>
    <string name="string_bp">血压</string>
    <string name="string_only_one">仅此一次</string>
    <string name="string_login">登录</string>
    <string name="string_add_remind">添加提醒</string>
    <string name="string_title">标题</string>
    <string name="string_take_medic_plan">服用计划</string>
    <string name="string_every_day_times">每天次数</string>
    <string name="string_more">更多</string>
    <string name="string_start_time">开始时间</string>
    <string name="string_end_time">结束时间</string>
    <string name="string_today_time">当前时间</string>
    <string name="string_set_account_self">账户与安全</string>
    <string name="string_set_unit">单位设置</string>
    <string name="string_set_permission_desc">权限使用说明</string>
    <string name="string_alarm_never">永不</string>
    <string name="string_alarm_repeat">重复</string>
    <string name="string_every_day">每天</string>
    <string name="string_save">保存</string>
    <string name="text_set">设置</string>
    <string name="string_rest_heart">静息心率</string>
    <string name="string_sport_heart">运动心率</string>
    <string name="string_status_heart_desc1">热身放松</string>
    <string name="string_status_heart_desc2">脂肪燃烧</string>
    <string name="string_status_heart_desc3">心肺强化</string>
    <string name="string_status_heart_desc4">耐力强化</string>
    <string name="string_status_heart_desc5">无氧极限</string>
    <string name="string_sleep_deep_scale">深睡比例</string>
    <string name="string_sleep_light_scale">浅睡比例</string>
    <string name="string_sleep_eye_scale">眼动比例</string>
    <string name="string_sleep_awake_times">清醒次数</string>
    <string name="string_sleep_desc">科学睡眠参考值</string>
    <string name="mean_resting_heart_rate">静息心率平均值：60-80次/分钟</string>
    <string name="light_sleep_55"><![CDATA[<55%]]></string>
    <string name="diastolic_pressure_85"><![CDATA[舒张压<85mmHg]]></string>
    <string name="systolic_pressure_130"><![CDATA[收缩压<130mmHg]]></string>
    <string name="systolic_pressure_130_139">收缩压130～139mmHg</string>
</resources>