<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_rest_heart"
        android:id="@+id/tvTitle"
        android:padding="16dp"
        android:textColor="@color/main_text_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mean_resting_heart_rate"
        android:background="@drawable/heart_frame_red"
        android:layout_marginLeft="16dp"
        android:textColor="@color/color_heart"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_sport_heart"
        android:padding="16dp"
        android:textColor="@color/main_text_color"
        />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_heart_constant_1"
        app:tvTypeText_index="@string/string_status_heart_desc1"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_low"
        app:tvTypeColor_index="@color/color_blood_pressure_low"
        app:contentTextColor_index="@color/bottom_nav_text_dim"
        />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_heart_constant_2"
        app:tvTypeText_index="@string/string_status_heart_desc2"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_green"
        app:tvTypeColor_index="@color/color_main_green"
        />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_heart_constant_3"
        app:tvTypeText_index="@string/string_status_heart_desc3"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:tvTypeColor_index="@color/color_blood_pressure_one"
        app:styleImage_index="@drawable/round_bloodpressure_one_level"
        />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_heart_constant_4"
        app:tvTypeText_index="@string/string_status_heart_desc4"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_two_level"
        app:tvTypeColor_index="@color/color_blood_pressure_two"
        />

    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_heart_constant_5"
        app:tvTypeText_index="@string/string_status_heart_desc5"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_three_level"
        app:tvTypeColor_index="@color/color_heart"
        />

</LinearLayout>