<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_sleep_desc"
        android:padding="16dp"
        android:textColor="@color/main_text_color"
        />
    <com.app.fmate.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_sleep_night_time"
        app:tvTypeText_index="@string/string_sleep_ngith_value"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_time_sleep"
        app:tvTypeColor_index="@color/sub_text_color"
        />
    <com.app.fmate.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_sleep_deep_scale"
        app:tvTypeText_index="20-60%"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_deep_sleep"
        app:tvTypeColor_index="@color/sub_text_color"
        />
    <com.app.fmate.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_sleep_light_scale"
        app:tvTypeText_index="@string/light_sleep_55"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:tvTypeColor_index="@color/sub_text_color"
        app:styleImage_index="@drawable/round_light_sleep"
        />
    <com.app.fmate.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_sleep_eye_scale"
        app:tvTypeText_index="10-30%"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_eye_movement"
        app:tvTypeColor_index="@color/sub_text_color"
        />

    <com.app.fmate.widget.IndexItemLayout
        android:id="@+id/sleepLastItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/string_sleep_awake_times"
        app:tvTypeText_index="0-2次"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_awake"
        app:tvTypeColor_index="@color/sub_text_color"
        />

</LinearLayout>