<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/string_bp_rang_reference"
            android:textColor="@color/main_text_color" />

        <ImageView
            android:id="@+id/imgReplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:rotation="90"
            android:src="@mipmap/right_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBloodPressureIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/string_normal_bp"
            android:textColor="@color/color_blood_pressure_low"
            android:textSize="14sp" />

        <com.app.fmate.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="@string/systolic_pressure_130"
            app:styleImage_index="@drawable/round_bloodpressure_low"
            app:tvTypeColor_index="@color/color_blood_pressure_low" />

        <com.app.fmate.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="@string/diastolic_pressure_85"
            app:styleImage_index="@drawable/round_bloodpressure_low"
            app:tvTypeColor_index="@color/color_blood_pressure_low" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/string_bp_normal_h_bp"
            android:textColor="@color/color_blood_pressure_normal"
            android:textSize="14sp" />

        <com.app.fmate.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="@string/systolic_pressure_130_139"
            app:styleImage_index="@drawable/round_bloodpressure_normal"
            app:tvTypeColor_index="@color/color_blood_pressure_normal" />

        <com.app.fmate.widget.IndexItemLayout
            android:id="@+id/bpDbp85Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="舒张压85～89mmHg"
            app:styleImage_index="@drawable/round_bloodpressure_normal"
            app:tvTypeColor_index="@color/color_blood_pressure_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/string_one_h_bp"
            android:textColor="@color/color_blood_pressure_two"
            android:textSize="14sp" />

        <com.app.fmate.widget.IndexItemLayout
            android:id="@+id/spDbp140Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="收缩压140～159mmHg"
            app:styleImage_index="@drawable/round_bloodpressure_two_level"
            app:tvTypeColor_index="@color/color_blood_pressure_two" />

        <com.app.fmate.widget.IndexItemLayout
            android:id="@+id/bpDbp90Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="舒张压90～99mmHg"
            app:styleImage_index="@drawable/round_bloodpressure_two_level"
            app:tvTypeColor_index="@color/color_blood_pressure_two" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/string_tow_h_bp"
            android:textColor="@color/color_heart"
            android:textSize="14sp" />

        <com.app.fmate.widget.IndexItemLayout
            android:id="@+id/spDbp160Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="收缩压≥160mmHg"
            app:styleImage_index="@drawable/round_bloodpressure_three_level"
            app:tvTypeColor_index="@color/color_heart" />

        <com.app.fmate.widget.IndexItemLayout
            android:id="@+id/bpDbp100Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TextSize_index="14px"
            app:contentTextSize_index="18px"
            app:contentText_index="舒张压≥100mmHg"
            app:styleImage_index="@drawable/round_bloodpressure_three_level"
            app:tvTypeColor_index="@color/color_heart" />
    </LinearLayout>
</LinearLayout>